--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   ],
   "author": "Ian Denty",
   "license": "ISC",
+  "scripts": {
+    "build": "npm run site && npm run css && echo hello world",
+    "site": "metalsmith",
+    "css": "postcss --config postcss.json"
+  },
   "dependencies": {
     "handlebars": "^4.0.6",
     "metalsmith": "^2.3.0",
@@ -27,7 +32,6 @@
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-path": "^0.2.0",
     "metalsmith-permalinks": "^0.5.0",
-    "metalsmith-with-postcss": "^1.0.0",
     "postcss": "^5.2.14",
     "postcss-custom-properties": "^5.0.2",
     "postcss-import": "^9.1.0",
@@ -36,7 +40,7 @@
   "devDependencies": {
     "autoprefixer": "^6.7.3",
     "metalsmith-debug": "^1.1.0",
-    "postcss-cli": "^3.0.0-beta",
+    "postcss-cli": "^2.6.0",
     "postcss-csso": "^1.1.2"
   }
 }
