--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "A platform for stories about the state of the world",
   "main": "index.js",
   "scripts": {
-    "build": "npm run site && npm run css && echo hello world",
+    "build": "npm run site && npm run css && npm run js",
     "site": "metalsmith",
     "css": "postcss --config postcss.json",
-    "watch": "onchange src/**/*.css -- npm run build"
+    "js": "webpack --config webpack.json",
+    "watch:css": "onchange src/**/*.css -- npm run build",
+    "watch:js": "onchange src/**/*.js -- npm run js && npm run build",
+    "watch": "npm run watch:css && npm run watch:css"
   },
   "repository": {
     "type": "git",
@@ -37,9 +40,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.3",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
     "metalsmith-debug": "^1.1.0",
     "onchange": "^3.2.1",
     "postcss-cli": "^2.6.0",
-    "postcss-csso": "^1.1.2"
+    "postcss-csso": "^1.1.2",
+    "webpack": "^2.2.1"
   }
 }
