--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "volocene",
   "version": "1.0.0",
   "description": "A platform for stories about the state of the world",
-  "main": "index.js",
+  "main": "src/assets/js/app.js",
   "scripts": {
     "build": "npm run site && npm run css && npm run js",
     "site": "metalsmith",
     "css": "postcss --config postcss.json",
     "js": "webpack --config webpack.json",
-    "watch:css": "onchange src/**/*.css -- npm run build",
-    "watch:js": "onchange src/**/*.js -- npm run js && npm run build",
-    "watch": "npm run watch:css && npm run watch:css"
+    "lint:js": "eslint src/assets/js/*.js",
+    "watch:css": "onchange src/assets/css/*.css -- npm run build",
+    "watch:js": "onchange src/assets/js/*.js -- npm run lint:js && npm run js && npm run build",
+    "watch": "parallelshell 'npm run watch:css' 'npm run watch:js'"
   },
   "repository": {
     "type": "git",
@@ -43,8 +44,14 @@
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
+    "eslint": "^3.16.1",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
     "metalsmith-debug": "^1.1.0",
     "onchange": "^3.2.1",
+    "parallelshell": "^2.0.0",
     "postcss-cli": "^2.6.0",
     "postcss-csso": "^1.1.2",
     "webpack": "^2.2.1"
